bug(fix): Home link color misaligned

--- a/src/components/organisms/navigation/styles.sass
+++ b/src/components/organisms/navigation/styles.sass
@@ -31,6 +31,8 @@
         &:hover
           color: #FF7F50
         h1
+          color: black 
+          border-color: black
           font-family: 'Lato', 'Open Sans Condensed', sans-serif
           width: 150px
           font-size: 40px
